[package]
name = "xgpu"
version = "0.0.2"
edition = "2024"
license = "Apache-2.0"
description = "A thin, explicit, cross-platform graphics API. (In Development)"
keywords = ["xgpu", "gpu", "graphics"]
categories = ["graphics"]

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D_Fxc",
] }
objc2-metal = "0.3.2"
ash = "0.38.0"
